revisione testo lezione 1

--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-2-salta-tutto-livelli-nocicli/question.mdx
@@ -15,7 +15,21 @@ Questa volta, però, Carol deve riuscire a superare **più diversi livelli, con 
 
 Quando provi la tua soluzione, premendo sul pulsante _"Correggi la soluzione"_, vedrai in un colpo solo quali livelli di questa domanda hai risolto correttamente.
 I livelli sono indicati in alto a sinistra, dopo la scritta **Livello**, e per ciascuno vedrai una _"V"_ verde se l'hai superato, oppure una _"X"_ rossa se non l'hai superato.
-Cliccando su uno di questi simboli, potrai scegliere il livello su cui provare la tua soluzione con _"Esegui/pausa"_.
+Cliccando su uno di questi simboli, potrai scegliere il livello su cui poi provare la tua soluzione con _"Esegui/pausa"_.
+
+Attenzione che questa domanda è piuttosto difficile... se ti senti in difficoltà, prova a leggere alcuni di questi suggerimenti:
+
+<Hint label="suggerimento 1">
+  Guarda bene tutti i livelli. Quante volte dovrai saltare?
+</Hint>
+
+<Hint label="suggerimento 2">
+  Quando fai l'azione _"avanza"_, il personaggio sta fermo se ha davanti un ostacolo. Come puoi sfruttare questa cosa?
+</Hint>
+
+<Hint label="suggerimento 3">
+  Guarda i livelli uno per volta: prima di ogni salto, quante volte devi avanzare per assicurarti di arrivare all'ostacolo?
+</Hint>
 
 <Blockly
   toolbox={toolbox}
@@ -36,16 +50,3 @@ Cliccando su uno di questi simboli, potrai scegliere il livello su cui provare l
 > - Per superare anche il quarto livello, bisognerà avanzare una seconda volta prima del secondo salto: questa cosa non avrà effetto nel secondo e terzo livello, e quindi con questo superiamo tutti i livelli.
 
 Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa! Se l'hai risolta, dovresti vedere quattro _"V"_ verdi in alto a sinistra dopo la scritta **Livello**.
-Se non hai risolto tutto e ti senti in difficoltà, prova a leggere alcuni di questi suggerimenti:
-
-<Hint label="suggerimento 1">
-  Guarda bene tutti i livelli. Quante volte dovrai saltare?
-</Hint>
-
-<Hint label="suggerimento 2">
-  Quando fai l'azione _"avanza"_, il personaggio sta fermo se ha davanti un ostacolo. Come puoi sfruttare questa cosa?
-</Hint>
-
-<Hint label="suggerimento 3">
-  Guarda i livelli uno per volta: prima di ogni salto, quante volte devi avanzare per assicurarti di arrivare all'ostacolo?
-</Hint>
