--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-4-salta-tutto-ciclo-ostacoli/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-4-salta-tutto-ciclo-ostacoli/question.mdx
@@ -5,14 +5,16 @@ import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 import { Hint } from "~/utils/hint";
 
-Siamo sempre alla corsa ad ostacoli di Carol, e hai a disposizione gli stessi blocchi di prima per risolvere più livelli:
+Siamo sempre alla corsa ad ostacoli di Carol, e di nuovo sono comparsi alcuni ostacoli.
+Hai a disposizione gli stessi blocchi di prima per risolvere quattro livelli, **più uno nuovo:**
 
+- `N`: il numero di rocce che ti separano dalla bandierina.
+- `M`: il numero di ostacoli che ti separano dalla bandierina **(nuovo!)**.
 - `avanza`: avanza alla roccia successiva se possibile (sta ferma se ha davanti un ostacolo).
 - `salta`: salta oltre alla prossima roccia, atterrando su quella dopo.
 - `termina`: finisci la gara.
 
-Ora però ci sono alcuni ostacoli prima della bandierina! Hai a disposizione il numero $M$ che ti dice quanti **ostacoli** ti separano dalla bandierina, e ti servirà di nuovo sfruttare i cicli.
-Se ti senti in difficoltà, prova anche a leggere questo suggerimento:
+Ti servirà di nuovo sfruttare i cicli. Se ti senti in difficoltà, prova anche a leggere questo suggerimento:
 
 <Hint>
   Guarda bene tutti i livelli: prima di ogni salto, quante volte al minimo devi avanzare per assicurarti di arrivare all'ostacolo? Quante volte bisogna avanzare dopo aver saltato tutti gli ostacoli?
