revisione testo lezione 2

--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-3-salta-tutto-ciclo-piatto/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-3-salta-tutto-ciclo-piatto/question.mdx
@@ -12,13 +12,13 @@ Sempre nella sezione _"Esecuzione"_, hai a disposizione gli stessi blocchi di pr
 - `salta`: salta oltre alla prossima roccia, atterrando su quella dopo.
 - `termina`: finisci la gara.
 
-Puoi notare che il nuovo blocco `N` ha una forma stondata, diversa dagli altri: questo perché non è un'istruzione (un blocco che _fa qualcosa_), ma un blocco che _produce un valore_
+Puoi notare che il nuovo blocco `N` ha una forma stondata, diversa dagli altri: questo perché non è un blocco istruzione (un blocco che _fa qualcosa_), ma un blocco che _produce un valore_
 (in questo caso il numero di rocce che ti separano dalla bandierina). Non si può quindi attaccare sotto a _"Inizia qui"_, ma deve invece essere inserito dentro ad altri blocchi istruzione
-che contengano un spazio di simile forma stondata.
+(rettangolari) che contengano un spazio di simile forma stondata.
 
 Noterai anche che è comparsa una nuova sezione _"Cicli"_! Infatti, per riuscire a risolvere il livello, avrai bisogno di usare il tuo primo ciclo _"ripeti N volte"_.
-Questo blocco ti consente di specificare quante volte vuoi ripetere alcune operazioni, mettendo un blocco stondato che vuoi al posto del numero standard di ripetizioni (10).
-Puoi anche indicare quali sono le operazioni vuoi ripetere, mettendole nello spazio rettangolare che sta in mezzo al blocco.
+Questo blocco ti consente di specificare quante volte vuoi ripetere alcune operazioni, mettendo un blocco valore che vuoi al posto del numero standard di ripetizioni (10).
+Puoi anche indicare quali sono i blocchi istruzione che vuoi ripetere, mettendoli nello spazio rettangolare che sta in mezzo al blocco.
 
 <Blockly
   toolbox={toolbox}
