--- a/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-1-pranzo-no-condizioni/question.mdx
+++ b/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-1-pranzo-no-condizioni/question.mdx
@@ -5,20 +5,28 @@ import testcases from "./testcases.py";
 import Visualizer from "./visualizer.jsx";
 import { Hint } from "~/utils/hint";
 
-Tip-Tap deve preparare il pranzo ed ha allineato $N$ cibi che vuole mangiare dopo averli cotti.
+**Tip-Tap** deve preparare il pranzo ed ha allineato alcuni cibi che, uno per volta, vuole mangiare **dopo averli cotti.**
 Hai a disposizione questi blocchi:
 
-- `N`: il numero di cibi che Tip-Tap ha allineato.
-- `prossimo cibo`: il prossimo cibo che Tip-Tap non ha ancora mangiato.
+- `N`: il numero totale di cibi allineati.
+- `prossimo cibo`: il prossimo cibo in fila da mangiare.
 - `cuoci` $x$: cuoci il cibo $x$.
 - `mangia` $x$: mangia il cibo $x$.
-- `termina`: smetti di mangiare.
+- `termina`: smetti di mangiare e vai via dal pranzo.
 
 Scrivi un programma che consenta a Tip-Tap di pranzare come più preferisce!
 
-Ti basterà usare i tipi di blocchi (_"Esecuzione"_ e _"Cicli"_) visti nella sezione precedente.
-Attenzione che alcuni blocchi _"Esecuzione"_ questa volta contengono uno spazio in cui puoi inserire un altro blocco di tipo numerico (tondo),
-in maniera simile a come si inserisce un blocco numerico nei cicli per indicare quante volte ripetere.
+Ti basterà usare gli stessi tipi di blocchi visti nella sezione precedente: blocchi istruzione (rettangolari) e blocchi valore (stondati),
+che trovi nelle sezioni _"Esecuzione"_ e _"Cicli"_.
+Attenzione che alcuni blocchi _"Esecuzione"_ questa volta contengono uno spazio in cui puoi inserire un altro blocco valore,
+allo stesso modo di quando inserisci un blocco valore nel ciclo "ripeti N volte" per indicare quante volte ripetere.
+
+Attenzione inoltre che **non tutti i valori sono uguali:** il blocco `N` produce un valore numerico, mentre il blocco `prossimo cibo` produce
+come valore un cibo. E i numeri non si possono cuocere e mangiare...
+
+<Hint>
+  Devi ripetutamente cuocere e poi mangiare tutti gli `N` cibi in fila. Come puoi tradurre questa frase in un programma?
+</Hint>
 
 <Blockly
   toolbox={toolbox}
@@ -34,3 +42,7 @@ in maniera simile a come si inserisce un blocco numerico nei cicli per indicare 
 >
 > Secondo questo programma, per ognuno degli $N$ cibi che Tip-Tap vuole mangiare, il protagonista
 > lo cuoce e poi lo mangia.
+
+Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa!
+
+Se l'hai risolta, dovresti vedere quattro _"V"_ verdi in alto a sinistra dopo la scritta **Livello**.
