aggiunti suggerimenti domande 3-4 di lez2

--- a/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-3-pranzo-cond-doppia/question.mdx
+++ b/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-3-pranzo-cond-doppia/question.mdx
@@ -27,6 +27,10 @@ Inoltre, anche nella sezione _"Cicli"_ c'è un blocco istruzione in più: "ripet
 Nella forma di "ripeti mentre", ripete le azioni più volte mentre che la condizione è vera, fermandosi appena la condizione diventa falsa.
 Dopo averlo trascinato, puoi anche cliccare sul triangolino dopo "mentre" per trasformarlo in "ripeti fino a che": in questo caso, ripete le azioni mentre che la condizione è falsa, fermandosi appena diventa vera.
 
+<Hint>
+  Devi ripetutamente considerare i cibi in fila, cuocendoli e mangiandoli se sono verdure, e buttandoli se sono frutta, fermandoti appena arriva un cibo giallo. Come puoi tradurre questa frase in un programma?
+</Hint>
+
 <Blockly
   toolbox={toolbox}
   customBlocks={customBlocks}
