--- a/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-4-pranzo-operazioni-bool/question.mdx
+++ b/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-4-pranzo-operazioni-bool/question.mdx
@@ -29,6 +29,10 @@ Questi blocchi sono detti _operazioni logiche_ sui valori di verità inseriti ne
 
 Se ci pensi, questo è lo stesso significato che hanno le congiunzioni "e", "o" e "non" in italiano!
 
+<Hint>
+  Il comportamento di Carol è diverso da quello di Allie ma molto simile a quello di Bunny, cambiando solo la condizione secondo cui decide di cuocere i cibi: li cuoce se sono verdura e non gialli. Come puoi tradurre questa condizione in blocchi?
+</Hint>
+
 <Blockly
   toolbox={toolbox}
   customBlocks={customBlocks}
