aggiunta prima domanda lezione 3

--- a/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-1-pranzo-no-condizioni/question.mdx
+++ b/src/fibonacci-corso/2-blocchi-condizionali-e-ripeti-mentre/contest/s-1-pranzo-no-condizioni/question.mdx
@@ -16,7 +16,7 @@ Hai a disposizione questi blocchi:
 
 Scrivi un programma che consenta a Tip-Tap di pranzare come più preferisce!
 
-Ti basterà usare gli stessi tipi di blocchi visti nella sezione precedente: blocchi istruzione (rettangolari) e blocchi valore (stondati),
+Ti basterà usare gli stessi tipi di blocchi visti nella lezione precedente: blocchi istruzione (rettangolari) e blocchi valore (stondati),
 che trovi nelle sezioni _"Esecuzione"_ e _"Cicli"_.
 Attenzione che alcuni blocchi _"Esecuzione"_ questa volta contengono uno spazio in cui puoi inserire un altro blocco valore,
 allo stesso modo di quando inserisci un blocco valore nel ciclo "ripeti N volte" per indicare quante volte ripetere.
