aggiunta seconda domanda lez. 3

--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/contest.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/contest.mdx
@@ -2,6 +2,7 @@
 
 <Section>
   <Problem points={[5, 0, 0]}><S1CorridoioSemplice /></Problem>
+  <Problem points={[5, 0, 0]}><S2CorridoioDifficile /></Problem>
 </Section>
 
 </Contest>
