--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-1-corridoio-semplice/question.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-1-corridoio-semplice/question.mdx
@@ -11,7 +11,7 @@ La Fattoria Fibonacci è fatta da alcune stanze disposte in fila e separate da p
 All'inizio Bunny è nel prato, che sta a sinistra delle stanze.
 Hai a disposizione questi blocchi:
 
-- `N`: il numero di stanze.
+- `N`: il numero di stanze nella fattoria.
 - `sono nel prato`: vero se è Bunny è nel prato.
 - `muovi a destra/sinistra`: spostati nella stanza (o prato) a destra/sinistra della stanza (o prato) corrente.
 - `coniglietto presente`: vero se è presente un coniglietto nella stanza corrente.
