--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-2-corridoio-difficile/question.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-2-corridoio-difficile/question.mdx
@@ -49,4 +49,6 @@ Aiuta Bunny a raccogliere tutti i coniglietti (senza stare al buio) prima di com
 > prima di andare verso destra. Questo si può fare controllando se la lampadina a destra non è accesa,
 > e in caso premendo l'interruttore corrispondente.
 
-Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa!
+{/* Prima di passare alla prossima domanda, assicurati di aver risolto **tutti i livelli** di questa! */}
+
+**Lezione in costruzione, continua...**
