completata lezione 3 del corso di programmazione

--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/contest.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/contest.mdx
@@ -1,6 +1,8 @@
 <Contest>
 
 <Section>
+  <Problem points={[5, 0, 0]}><S3SquadraOrdinata /></Problem>
+  <Problem points={[5, 0, 0]}><S4SquadraDisordinata /></Problem>
   <Problem points={[5, 0, 0]}><S1CorridoioSemplice /></Problem>
   <Problem points={[5, 0, 0]}><S2CorridoioDifficile /></Problem>
 </Section>
