prima passata con i commenti di debora

--- a/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-1-salta-tutto-caso-singolo/question.mdx
+++ b/src/fibonacci-corso/1-blocchi-esecuzione-e-ripeti-n/contest/s-1-salta-tutto-caso-singolo/question.mdx
@@ -10,7 +10,7 @@ Se si avanza o atterra su una roccia alta si cade, perdendo la gara.
 Lo scopo della gara è di raggiungere la bandierina finale.
 Hai a disposizione questi blocchi:
 
-- `avanza`: avanza alla roccia successiva se possibile (sta ferma se ha davanti un ostacolo).
+- `avanza`: avanza alla roccia successiva **se possibile** (sta ferma se ha davanti un ostacolo).
 - `salta`: salta oltre alla prossima roccia, atterrando su quella dopo.
 - `termina`: finisci la gara.
 
