--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-2-corridoio-difficile/question.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-2-corridoio-difficile/question.mdx
@@ -6,16 +6,16 @@ import Visualizer from "./visualizer.jsx";
 import { Hint } from "~/utils/hint";
 
 È di nuovo l'ora della ricreazione. Oggi, però, ci sono diversi coniglietti che sono rimasti nella fattoria!
-Non solo: alcune delle luci della fattoria potrebbero essere spente. Questo è un problema perché Bunny ha paura del buio,
-quindi non è disposto ad entrare in una stanza se prima non ne accende la luce. In ogni stanza ci sono due interruttori,
+Non solo: alcune delle luci della fattoria potrebbero essere spente. Questo è un problema perché Allie ha paura del buio,
+quindi non è disposta ad entrare in una stanza se prima non ne accende la luce. In ogni stanza ci sono due interruttori,
 che servono per accendere le lampadine delle stanze a destra e a sinistra. La luce della prima stanza si può comandare anche dall'esterno.
 Quando un interruttore viene premuto, accende la lampadina se è spenta e la spegne se è accesa.
 
-Bunny parte di nuovo dal prato e deve andare a prendere tutti i coniglietti. Hai a disposizione questi blocchi:
+Allie parte di nuovo dal prato e deve andare a prendere tutti i coniglietti. Hai a disposizione questi blocchi:
 
 - `N`: il numero di stanze nella fattoria.
 - `M`: il numero di coniglietti da recuperare **(nuovo!)**.
-- `sono nel prato`: vero se è Bunny è nel prato.
+- `sono nel prato`: vero se è Allie è nel prato.
 - `muovi a destra/sinistra`: spostati nella stanza (o prato) a destra/sinistra della stanza (o prato) corrente.
 - `coniglietto presente`: vero se è presente un coniglietto nella stanza corrente.
 - `prendi/lascia la mano`: prendi/lascia la mano del coniglietto nella stanza corrente.
@@ -23,7 +23,7 @@ Bunny parte di nuovo dal prato e deve andare a prendere tutti i coniglietti. Hai
 - `interruttore a destra/sinistra`: premi l'interruttore che comanda la stanza a destra/sinistra **(nuovo!)**.
 - `termina`: comincia la ricreazione.
 
-Aiuta Bunny a raccogliere tutti i coniglietti (senza stare al buio) prima di cominciare la ricreazione!
+Aiuta Allie a raccogliere tutti i coniglietti (senza stare al buio) prima di cominciare la ricreazione!
 
 <Hint>
   Prova a riutilizzare il programma che risolve la scorsa domanda. Come dovrai modificarlo?
