--- a/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-1-mele-singolo/question.mdx
+++ b/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-1-mele-singolo/question.mdx
@@ -23,8 +23,17 @@ che consentono di fare semplici operazioni aritmetiche su blocchi valore numeric
 Inoltre, ti servirà anche un nuovo blocco verità (esagonale) che trovi all'inizio della
 categoria _"Logica"_, che serve a confrontare due blocchi valore numerici.
 
-<Hint>
+<Hint label="suggerimento 1">
   Ci sono due casi che devi considerare, quali sono?
+</Hint>
+
+<Hint label="suggerimento 2">
+  Come puoi contare il numero di mele con una formula matematica?
+  Ricorda che con i blocchi _"Matematica"_ puoi mettere formule nei tuoi programmi.
+</Hint>
+
+<Hint label="suggerimento 3">
+  Pensa a come usare i blocchi logici per imporre le condizioni che desideri!
 </Hint>
 
 <Blockly
