--- a/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-3-mele-for/question.mdx
+++ b/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-3-mele-for/question.mdx
@@ -23,10 +23,20 @@ Per risolvere questo problema dovrai usare un nuovo blocco, detto **ciclo contat
 che si trova nella categoria _"Cicli"_. Quando aggiungi questo ciclo al tuo programma,
 una nuova variabile si crea automaticamente, usando il nome convenzionale $i$ (e se
 aggiungi altri cicli contatore, i nomi seguenti $j$, $k$, ecc). Il ciclo ti chiede poi
-di specificare un intervallo numerico di valori "da/a" e un incremento "per". Quando
-il ciclo verrà eseguito, tutte le istruzioni contenute saranno ripetute più volte, ogni
-volta aggiornando il valore della variabile contatore del ciclo, partendo dal valore
-"da" e aumentandolo del valore "per" fino a raggiungere il valore "a".
+di specificare:
+
+- un intervallo numerico di valori "da/a";
+- e una dimensione di incremento "per".
+
+Quando il ciclo verrà eseguito, tutte le istruzioni contenute saranno ripetute più volte,
+ogni volta aggiornando il valore della variabile contatore del ciclo, partendo dal valore
+"da" e aumentandolo del valore "per" fino a raggiungere il valore "a". Per esempio, se fai
+un ciclo "conta con $i$ da 3 a 8 per 2", l'istruzione nel ciclo verrà eseguita:
+
+- una prima volta, dopo aver assegnato il valore iniziale $3$ alla variabile $i$;
+- una seconda volta, dopo aver aumentato il valore di $i$ di 2, che quindi arriva a contenere il valore $5$;
+- una terza volta dopo aver assegnato il valore $7$ a $i$;
+- il ciclo poi termina perché il valore successivo sarebbe $9$ che però è maggiore del limite $8$ specificato.
 
 <Hint>
   Puoi riutilizzare la stessa struttura della scorsa domanda.
