--- a/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-4-mele-finale/question.mdx
+++ b/src/fibonacci-corso/4-blocchi-matematici-e-variabili/contest/s-4-mele-finale/question.mdx
@@ -32,6 +32,12 @@ nelle domande precedenti!
   In che modo bisogna modificare il totale di mele rimanenti sugli alberi, dopo aver fatto la raccolta?
 </Hint>
 
+<Hint label="suggerimento 3">
+  Ricorda che puoi modificare il valore delle variabili anche all'interno di un ciclo,
+  usando anche formule matematiche o blocchi condizionali del tipo _"se... fai... altrimenti"_,
+  a seconda di cosa ti serve!
+</Hint>
+
 <Blockly
   toolbox={toolbox}
   customBlocks={customBlocks}
