--- a/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-1-corridoio-semplice/question.mdx
+++ b/src/fibonacci-corso/3-composizione-di-cicli-e-condizioni/contest/s-1-corridoio-semplice/question.mdx
@@ -6,20 +6,20 @@ import Visualizer from "./visualizer.jsx";
 import { Hint } from "~/utils/hint";
 
 Alla Fattoria Fibonacci è l'ora della ricreazione per i coniglietti più piccoli, in cui si gioca tutti insieme nel prato!
-Tuttavia, uno di loro è rimasto nella fattoria, e Bunny è stato incaricato di andarlo a prendere.
+Tuttavia, uno di loro è rimasto nella fattoria, e Allie è stata incaricata di andarlo a prendere.
 La Fattoria Fibonacci è fatta da alcune stanze disposte in fila e separate da porte, come un lungo corridoio.
-All'inizio Bunny è nel prato, che sta a sinistra delle stanze.
+All'inizio Allie è nel prato, che sta a sinistra delle stanze.
 Hai a disposizione questi blocchi:
 
 - `N`: il numero di stanze nella fattoria.
-- `sono nel prato`: vero se è Bunny è nel prato.
+- `sono nel prato`: vero se è Allie è nel prato.
 - `muovi a destra/sinistra`: spostati nella stanza (o prato) a destra/sinistra della stanza (o prato) corrente.
 - `coniglietto presente`: vero se è presente un coniglietto nella stanza corrente.
 - `prendi/lascia la mano`: prendi/lascia la mano del coniglietto nella stanza corrente.
 - `termina`: comincia la ricreazione.
 
-Mentre che Bunny tiene il coniglietto per mano, il coniglietto seguirà tutti gli spostamenti di Bunny.
-Aiuta Bunny a raccogliere il coniglietto mancante e portarlo nel prato prima di cominciare la ricreazione!
+Mentre che Allie tiene il coniglietto per mano, il coniglietto seguirà tutti gli spostamenti di Allie.
+Aiuta Allie a raccogliere il coniglietto mancante e portarlo nel prato prima di cominciare la ricreazione!
 
 Ti basterà usare gli stessi tipi di blocchi visti nella lezione precedente:
 
@@ -46,10 +46,10 @@ hanno quindi delle parti (destra/sinistra, prendi/lascia) che possono essere mod
 >
 > ![soluzione](sol.png)
 >
-> Come prima cosa, Bunny deve raggiungere il coniglietto nella fattoria.
+> Come prima cosa, Allie deve raggiungere il coniglietto nella fattoria.
 > Quindi continua ad andare verso destra, ripetendo fino a che il coniglietto non è presente nella stanza in cui si trova, per poi prendergli la mano.
 >
-> A questo punto, Bunny deve uscire dalla fattoria.
+> A questo punto, Allie deve uscire dalla fattoria.
 > Continua quindi ad andare verso sinistra (portandosi dietro il coniglietto), ripetendo fino a che non arriva nel prato.
 > A questo punto può lasciare la mano del coniglietto e dare il via alla ricreazione!
 
